Revision history for WWW::Mechanize

Please note that WWW::Mechanize and Test::WWW::Mechanize are no
longer using rt.cpan.org for bug tracking.  They are now being
tracked via Google Code at
http://code.google.com/p/www-mechanize/issues/list

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

1.51_02     Tue Nov 18 01:30:54 CST 2008
========================================
[STILL BROKEN]
t/local/click_button.t is still failing its tests for calling ->click
on an HTML::Form object.  I suspect this is an LWP change, but I
haven't dug into it enough yet.

[FIXES]
Fixed the bad credentials API that stomped on LWP::UserAgent's
credentials() method.  Thanks to Max Maschien and Matt Lawrence.

The $mech->links method now finds <link href="..."> links. Thanks
to H.Merijn Brand.

Makefile.PL explicitly requires Perl 5.8.0.

URI.pm has to be version 1.36 or else URIs don't get encoded
correctly.

LWP has to be 5.819 or we have encoding problems.


1.51_01     Thu Nov  6 15:13:03 CST 2008
========================================
[FIXES]
Page history is now working much better.  The $mech->back() method
should behave more like a browser now.  Most notably, it no longer
restores the cookie state, just like your browser doesn't restore
cookie state when you page back.  It also should use much less
memory.


1.50        Sun Sun Oct 26 22:42:46 CDT 2008
========================================
[THINGS THAT MAY BREAK YOUR CODE]
WWW::Mechanize now requires version 5.815 of LWP.  This in itself
may cause problems for you because of changes in how LWP does
authentication.


1.49_01     Sat Sep 27 23:50:04 CDT 2008
========================================
[THINGS THAT MAY BREAK YOUR CODE]
The autocheck argument to the constructor is now ON by default,
unless WWW::Mechanize is being subclassed.  There are so many new
programmers whose ->get() calls fail unchecked that I'm now putting
on the seat belts for them.

[FIXES]