@@ -8,6 +8,13 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+NEXT
+========================================
+[FIXED]
+The $mech->clone() method was not passing the cookie jar to its
+clone properly.  Thanks to David Sainty.
+
+
 1.51_02     Tue Nov 18 01:30:54 CST 2008
 ========================================
 [STILL BROKEN]
